Details
Description
reactos-bootcd-0.4.15-dev-5492-g47f3a4e-x86-gcc-lin-dbg
PDF Annotator 6 : https://www.pdfannotator.com/archive/pdfannotator/V6/std/xx/PDFAnnotatorSetup.exe
- After installation, start PDF Annotator
- Last chance exception then 0x1E BSOD when cont'd

Log : ReactOS.log![]()
(win32ss/user/ntuser/message.c:3161) err: WFII: WAIT 2 |
(win32ss/user/ntuser/message.c:3166) err: WFII: timeoutEntered debugger on last-chance exception (Exception Code: 0xc0000005) (Page Fault) |
Memory at 0x7FFDD6E0 could not be accessed |
kdb:> bt
|
Eip:
|
<win32k.sys:661b9 (win32ss/user/ntuser/message.c:3182 (NtUserWaitForInputIdle))> |
Frames:
|
<ntoskrnl.exe:3fe5 (:0 (KiSystemCallTrampoline))> |
<ntoskrnl.exe:16050d (ntoskrnl/ke/i386/traphdlr.c:1840 (KiSystemServiceHandler))> |
<ntoskrnl.exe:3e2f (:0 (KiFastCallEntry))> |
* <ntdll.dll:f485 (dll/ntdll/dispatch/i386/dispatch.S:255 (KiIntSystemCall))> |
<PDFAnnotatorSetup.tmp:af9d4>
|
<PDFAnnotatorSetup.tmp:afc0e>
|
<PDFAnnotatorSetup.tmp:d8813>
|
<PDFAnnotatorSetup.tmp:e550b>
|
<PDFAnnotatorSetup.tmp:e63fc>
|
<PDFAnnotatorSetup.tmp:e64bc>
|
<PDFAnnotatorSetup.tmp:c9811>
|
<PDFAnnotatorSetup.tmp:5cdc0>
|
<PDFAnnotatorSetup.tmp:60d5b>
|
<PDFAnnotatorSetup.tmp:45cf8>
|
<PDFAnnotatorSetup.tmp:60eab>
|
<PDFAnnotatorSetup.tmp:60d5b>
|
<PDFAnnotatorSetup.tmp:73c8c>
|
<PDFAnnotatorSetup.tmp:fb1e7>
|
<PDFAnnotatorSetup.tmp:2bcf1>
|
* <user32.dll:6a9a1 (win32ss/user/user32/windows/wndproc_fixup.S:44 (CALL_EXTERN_WNDPROC))> |
* <user32.dll:5ec8f (win32ss/user/user32/windows/message.c:1547 (IntCallWindowProcW))> |
* <user32.dll:5f0a9 (win32ss/user/user32/windows/message.c:1798 (IntCallMessageProc))> |
* <user32.dll:5fca2 (win32ss/user/user32/windows/message.c:2403 (SendMessageW))> |
* <comctl32.dll:6368 (dll/win32/comctl32/button.c:802 (BUTTON_WindowProc))> |
* <user32.dll:6a9a1 (win32ss/user/user32/windows/wndproc_fixup.S:44 (CALL_EXTERN_WNDPROC))> |
* <user32.dll:5ec8f (win32ss/user/user32/windows/message.c:1547 (IntCallWindowProcW))> |
* <user32.dll:5f239 (win32ss/user/user32/windows/message.c:1872 (CallWindowProcW))> |
<PDFAnnotatorSetup.tmp:60e57>
|
<PDFAnnotatorSetup.tmp:60d5b>
|
<PDFAnnotatorSetup.tmp:45cf8>
|
<PDFAnnotatorSetup.tmp:2bcf1>
|
* <user32.dll:6a9a1 (win32ss/user/user32/windows/wndproc_fixup.S:44 (CALL_EXTERN_WNDPROC))> |
* <user32.dll:5ec8f (win32ss/user/user32/windows/message.c:1547 (IntCallWindowProcW))> |
* <user32.dll:5f0a9 (win32ss/user/user32/windows/message.c:1798 (IntCallMessageProc))> |
* <user32.dll:5f81a (win32ss/user/user32/windows/message.c:2046 (DispatchMessageW))> |
<PDFAnnotatorSetup.tmp:7c385>
|
Couldn't access memory at 0x000801B8! |
Attachments
Issue Links
- blocks
-
CORE-19015 PDF Annotator 6 is spamming Invalid handle 00000000 passed to NtWaitForMultipleObjects in debug log
-
- Open
-
- is duplicated by
-
CORE-19014 BSOD 0x1E (win32k.sys) when starting Chicken Invaders 2
-
- Resolved
-
- relates to
-
CORE-10017 NtUserWaitForInputIdle does not ensure correct process context before accessing CLIENTINFO
-
- Resolved
-