[0.4.13][NTUSER] NtUserWaitForInputIdle: Fix unhandled exception BSOD 0x1E, and tweaks

Backport the following commits:

0.4.15-dev-6397-g 6b7efb331c0cd20c8610cd24d5e7221cff59969a [NTUSER] co_IntSendMessageWithCallBack: Formatting only, no functional changes
0.4.15-dev-6227-g c7e4c3a8e9d921233c1731ef64c388ed40b15fcb [NTUSER] NtUserWaitForInputIdle: Fix unhandled exception BSOD 0x1E CORE-18728 CORE-19014 (#5391)
0.4.15-dev-697-g 9f428f5522c9a6a4ec8cf19f7f0c543c944b9483 [NTUSER] Demote ERR to TRACE, also some minor corrections (#3132)

win32k.sys master GCC8.4.0dbg RosBEWin2.2.0              3.477.504
win32k.sys 0.4.14 GCC4.7.2dbg RosBEWin2.1.6 2.904.064 -> 2.904.064
win32k.sys 0.4.13 GCC4.7.2dbg RosBEWin2.1.6 2.895.872 -> 2.895.872
win32k.sys 0.4.12 GCC4.7.2dbg RosBEWin2.1.6 2.887.680 -> 2.887.680
win32k.sys 0.4.11 GCC4.7.2dbg RosBEWin2.1.6 2.867.200 -> 2.867.200
win32k.sys 0.4.10 GCC4.7.2dbg RosBEWin2.1.6 2.863.104 -> 2.863.104
win32k.sys 0.4. 9 GCC4.7.2dbg RosBEWin2.1.6 2.834.432 -> 2.834.432
win32k.sys 0.4. 8 GCC4.7.2dbg RosBEWin2.1.6 2.830.336 -> 2.830.336
win32k.sys 0.4. 7 GCC4.7.2dbg RosBEWin2.1.6 2.830.336 -> 2.830.336